--- a/css/earn/earn.scss
+++ b/css/earn/earn.scss
@@ -133,7 +133,7 @@
     @media screen and (max-width:767px) {
       height: 4rem;
       width: 4rem;
-      padding: 0.8em;
+      padding: 0.8rem;
     }
   }
 
