--- a/css/app/app.scss
+++ b/css/app/app.scss
@@ -47,6 +47,17 @@ li {
   padding: 0;
 }
 
+.page_title{
+  font-size: 2rem;
+  font-weight: 700;
+  color: var(--color_dark);
+  padding: 0.5rem 0;
+
+  @media screen and (min-width:992px) {
+    display: none;
+  }
+}
+
 button,
 .btn {
   border: none;
@@ -147,13 +158,17 @@ button.btn_action_boost {
   justify-content: center;
   font-size: 1.8rem;
   color: var(--color_primary);
-  font-weight: 600;
+  font-weight: 700;
   padding: 1.2rem;
   background-color: var(--color_white);
   border-radius: 0.5rem;
   border: 1px solid var(--border_color);
   border-bottom: none;
   width: 100%;
+
+  @media screen and (max-width:991px) {
+    font-size: 1.6rem;
+  }
 }
 
 .tableResponsive {
@@ -842,11 +857,7 @@ label.label {
   }
 }
 
-// ========= For login
-@import "../Variables/Variables.scss";
-@import url("../app.css");
-@import url("../index.css");
-
+// ========= For login 
 .header_body {
   min-height: 100vh;
   width: 100%;
@@ -1149,6 +1160,10 @@ label.label {
     border-radius: 100%;
     padding: 1rem;
 
+    &::after{
+      display: none;
+    }
+
     svg {
       color: var(--color_primary);
       height: 100%;
@@ -1165,6 +1180,7 @@ label.label {
       a {
         font-size: 1.3rem;
         padding: 0.6rem 1.5rem;
+        cursor: pointer;
 
         svg {
           height: 2rem;
