--- a/css/header/header.scss
+++ b/css/header/header.scss
@@ -41,6 +41,14 @@
     align-items: center;
     justify-content: right;
 
+    .deposit_btn{
+      background-color: var(--color_primary);
+      padding: 0.8rem 2rem;
+      background-color: var(--color_primary);
+      color: var(--color_white);
+      border-radius: 0.6rem;
+    }
+
     .dropdown {
       margin: 0 0 0 1rem;
 
