--- a/css/app/app.scss
+++ b/css/app/app.scss
@@ -51,10 +51,10 @@ li {
   font-size: 2rem;
   font-weight: 700;
   color: var(--color_dark);
-  padding: 0.5rem 0;
+  padding: 0.5rem 1rem;
 
-  @media screen and (min-width:992px) {
-    display: none;
+  @media screen and (max-width:991px) {
+    padding: 0.5rem 0;
   }
 }
 
@@ -1052,29 +1052,38 @@ label.label {
 }
 
 #pagination {
-  display: flex;
-  align-items: center;
-  justify-content: end;
   background-color: var(--color_white);
-  padding: 0.5rem;
+  padding: 1rem;
   border-radius: 0.5rem;
+  
+  ul{
+    display: flex;
+    align-items: center;
+    justify-content: end;
+    width:100%;
 
-  li {
-    margin-left: 1rem;
-
-    a {
-      font-size: 1.4rem;
+    li {
+      margin-left: 1rem;
+      
+      a {
+      font-size: 1.2rem;
       padding: 1rem;
       background-color: var(--color_lightprimary);
-      height: 2.8rem;
-      width: 2.8rem;
+      height: 2.4rem;
+      width: 2.4rem;
       border-radius: 50%;
       display: flex;
       align-items: center;
       justify-content: center;
       color: var(--color_dark);
+
+      &.active{
+        background-color: var(--color_primary);
+        color: var(--color_white);
+      }
     }
   }
+}
 }
 
 // ========= Help Center
@@ -1173,7 +1182,7 @@ label.label {
 
   .dropdown-menu {
     max-width: 15rem;
-    border: 1px solid #ececec;
+    border: 1px solid #ececec;  
     border-radius: 1rem;
 
     li {
