--- a/css/app/app.scss
+++ b/css/app/app.scss
@@ -8,8 +8,8 @@
 @import "../faq//faq.scss";
 @import "../drawer/drawer.scss";
 @import "../variables/variables.scss";
-// @import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap");
-@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
+// @import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=Exchange");
+@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=Exchange');
 
 
 * {
@@ -35,6 +35,10 @@ body {
   }
 }
 
+.modal-backdrop {
+  z-index: 1044 !important;
+}
+
 a {
   text-decoration: none;
   display: block;
@@ -47,7 +51,7 @@ li {
   padding: 0;
 }
 
-.page_title{
+.page_title {
   font-size: 2rem;
   font-weight: 700;
   color: var(--color_dark);
@@ -445,13 +449,14 @@ label.label {
 
   h5 {
     font-size: 1.8rem;
-    font-weight: 600;
+    font-weight: 700;
     text-transform: uppercase;
+    margin-bottom: 0;
   }
 
   button.modal_close {
     min-width: 3rem;
-    height: 3rem;
+    height: 3.5rem;
     padding: 0.6rem;
     background-color: var(--color_lightprimary);
     color: var(--color_primary);
@@ -464,6 +469,32 @@ label.label {
 
 .modal_body {
   padding: 1.2rem;
+
+  .conform_icon {
+    height: 5rem;
+    width: 5rem;
+    border-radius: 50%;
+    color: var(--color_primary);
+    margin: 2rem auto;
+
+    svg {
+      height: 100%;
+      width: 100%;
+      color: var(--color_primary);
+    }
+  }
+
+  h5.conform_small {
+    font-size: 1.6rem;
+    text-align: center;
+    color: var(--color_dark);
+  }
+
+  h6.conform_text {
+    font-size: 1.8rem;
+    text-align: center;
+    color: var(--color_secondary);
+  }
 
   button.copy_address {
     width: 3rem;
@@ -733,71 +764,86 @@ label.label {
       }
     }
 
-    .symbol_list {
-      max-height: 34rem;
-      height: 100%;
-      overflow-y: auto;
-      // margin-top: 1rem;
-      padding-right: 1rem;
 
-      .drawer_select_item {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
+  }
+}
+
+.symbol_list {
+  max-height: 34rem;
+  height: 100%;
+  width: 100%;
+  overflow-y: auto;
+  margin-top: 1rem;
+  padding-right: 1rem;
+
+  .drawer_select_item {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    border: 1px solid var(--color_grey);
+    // margin-bottom: 1rem;
+
+    .select_symbol {
+      display: flex;
+      align-items: center;
+      width: 100%;
+
+      .symbol {
+        max-height: 2.2rem;
+        max-width: 2.2rem;
+        height: 100%;
         width: 100%;
-        border: 1px solid var(--color_grey);
-        margin-bottom: 1rem;
+      }
 
-        .select_symbol {
-          display: flex;
-          align-items: center;
-          width: 100%;
+      .symbol_name {
+        display: block;
+        margin-left: 1rem;
 
-          .symbol {
-            max-height: 3rem;
-            max-width: 3rem;
-            height: 100%;
-            width: 100%;
-          }
-
-          .symbol_name {
-            display: block;
-            margin-left: 1rem;
-
-            p {
-              font-size: 1.4rem;
-              font-weight: 600;
-              color: var(--color_primary);
-              text-transform: capitalize;
-            }
-
-            span {
-              font-size: 1.2rem;
-              color: var(--color_secondary);
-              font-weight: 400;
-              margin-top: 0.5rem;
-              text-transform: uppercase;
-            }
-          }
+        p {
+          font-size: 1.3rem;
+          font-weight: 600;
+          color: var(--color_primary);
+          text-transform: capitalize;
         }
 
-        .symbol_price {
-          display: block;
-          text-align: right;
-          width: 100%;
-
-          p {
-            font-size: 1.3rem;
-            color: var(--color_dark);
-            font-weight: 500;
-          }
-
-          span {
-            font-size: 1.2rem;
-            color: var(--color_secondary);
-            font-weight: 400;
-          }
+        span {
+          font-size: 1.2rem;
+          color: var(--color_secondary);
+          font-weight: 400;
+          margin-top: 0.5rem;
+          text-transform: uppercase;
         }
+      }
+    }
+
+    .symbol_price {
+      display: block;
+      text-align: right;
+      width: 100%;
+
+      input.form-check-input {
+        height: 2.4rem;
+        width: 2.4rem;
+        box-shadow: none;
+        color: var(--color_primary);
+
+        &:checked {
+          background-color: var(--color_primary);
+          border-color: var(--color_primary);
+        }
+      }
+
+      p {
+        font-size: 1.3rem;
+        color: var(--color_dark);
+        font-weight: 500;
+      }
+
+      span {
+        font-size: 1.2rem;
+        color: var(--color_secondary);
+        font-weight: 400;
       }
     }
   }
@@ -1055,35 +1101,35 @@ label.label {
   background-color: var(--color_white);
   padding: 1rem;
   border-radius: 0.5rem;
-  
-  ul{
+
+  ul {
     display: flex;
     align-items: center;
     justify-content: end;
-    width:100%;
+    width: 100%;
 
     li {
       margin-left: 1rem;
-      
-      a {
-      font-size: 1.2rem;
-      padding: 1rem;
-      background-color: var(--color_lightprimary);
-      height: 2.4rem;
-      width: 2.4rem;
-      border-radius: 50%;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      color: var(--color_dark);
 
-      &.active{
-        background-color: var(--color_primary);
-        color: var(--color_white);
+      a {
+        font-size: 1.2rem;
+        padding: 1rem;
+        background-color: var(--color_lightprimary);
+        height: 2.4rem;
+        width: 2.4rem;
+        border-radius: 50%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        color: var(--color_dark);
+
+        &.active {
+          background-color: var(--color_primary);
+          color: var(--color_white);
+        }
       }
     }
   }
-}
 }
 
 // ========= Help Center
@@ -1169,7 +1215,7 @@ label.label {
     border-radius: 100%;
     padding: 1rem;
 
-    &::after{
+    &::after {
       display: none;
     }
 
@@ -1182,7 +1228,7 @@ label.label {
 
   .dropdown-menu {
     max-width: 15rem;
-    border: 1px solid #ececec;  
+    border: 1px solid #ececec;
     border-radius: 1rem;
 
     li {
