--- a/css/balance/balance.scss
+++ b/css/balance/balance.scss
@@ -37,24 +37,24 @@
     height: 100%;
     position: relative;
 
-    svg#visual{
+    svg#visual {
       display: none;
     }
 
-    // &.green {
-    //   background-color: rgba(0, 156, 25, 0.1);
+    &.green {
+      background-color: rgba(0, 156, 25, 0.1);
 
-    //   .icons {
-    //     color: rgba(0, 156, 25, 1);
-    //     height: 10rem;
-    //     width: 10rem;
+      .icons {
+        color: rgba(0, 156, 25, 1);
+        height: 10rem;
+        width: 10rem;
 
-    //     @media screen and (max-width:767px) {
-    //       height: 8rem;
-    //       width: 8rem;
-    //     }
-    //   }
-    // }
+        @media screen and (max-width:767px) {
+          height: 8rem;
+          width: 8rem;
+        }
+      }
+    }
 
     // &.danger {
     //   background-color: rgba(184, 0, 0, 0.1);
@@ -63,7 +63,7 @@
     //     color: rgba(184, 0, 0, 1);
     //     height: 8rem;
     //     width: 8rem;
-        
+
     //     @media screen and (max-width:767px) {
     //       height: 6rem;
     //       width: 6rem;
@@ -79,13 +79,13 @@
       z-index: 1;
       display: none;
 
-    @media screen and (max-width:991px) {
-      top: 40%;
-    }
- 
-    @media screen and (max-width:575px) {
-      top: 50%;
-    }
+      @media screen and (max-width:991px) {
+        top: 40%;
+      }
+
+      @media screen and (max-width:575px) {
+        top: 50%;
+      }
     }
 
     @media screen and (max-width: 991px) {
