--- a/css/balance/balance.css
+++ b/css/balance/balance.css
@@ -43,6 +43,23 @@
   display: none;
 }
 
+.balanceCard_box .card_simple.green {
+  background-color: rgba(0, 156, 25, 0.1);
+}
+
+.balanceCard_box .card_simple.green .icons {
+  color: #009c19;
+  height: 10rem;
+  width: 10rem;
+}
+
+@media screen and (max-width: 767px) {
+  .balanceCard_box .card_simple.green .icons {
+    height: 8rem;
+    width: 8rem;
+  }
+}
+
 .balanceCard_box .card_simple .icons {
   position: absolute;
   top: 55%;
