--- a/css/app/app.scss
+++ b/css/app/app.scss
@@ -467,6 +467,18 @@ label.label {
   }
 }
 
+h5.conform_small {
+  font-size: 1.6rem;
+  text-align: center;
+  color: var(--color_dark);
+}
+
+h6.conform_text {
+  font-size: 1.8rem;
+  text-align: center;
+  color: var(--color_secondary);
+}
+
 .modal_body {
   padding: 1.2rem;
 
@@ -482,18 +494,6 @@ label.label {
       width: 100%;
       color: var(--color_primary);
     }
-  }
-
-  h5.conform_small {
-    font-size: 1.6rem;
-    text-align: center;
-    color: var(--color_dark);
-  }
-
-  h6.conform_text {
-    font-size: 1.8rem;
-    text-align: center;
-    color: var(--color_secondary);
   }
 
   button.copy_address {
@@ -1236,6 +1236,7 @@ label.label {
         font-size: 1.3rem;
         padding: 0.6rem 1.5rem;
         cursor: pointer;
+        border-bottom: 1px solid var(--border_color);
 
         svg {
           height: 2rem;
