--- a/css/app/app.scss
+++ b/css/app/app.scss
@@ -763,8 +763,6 @@ h6.conform_text {
         }
       }
     }
-
-
   }
 }
 
@@ -1249,6 +1247,156 @@ h6.conform_text {
           color: var(--color_primary);
         }
       }
+    }
+  }
+}
+
+.sendBoxes,
+.ExchangeBoxes {
+  max-width: 50%;
+  width: 100%;
+  margin: 0 auto;
+  background-color: var(--color_white);
+  border: 1px solid var(--border_color);
+  padding: 2rem;
+  border-radius: 1rem;
+
+  @media screen and (max-width:991px) {
+    max-width: 100%;
+  }
+}
+
+
+h3.title_big {
+  font-size: 2.6rem;
+  color: var(--color_primary);
+  font-weight: 700;
+  margin-top: 1.5rem;
+}
+
+
+h4.title {
+  font-size: 2rem;
+  color: var(--color_primary);
+  font-weight: 600;
+  margin-top: 1.5rem;
+}
+
+p.sub_title {
+  font-size: 1.4rem;
+  color: var(--color_secondary);
+  font-weight: 500;
+  margin: 0.6rem 0;
+  // text-transform: capitalize;
+}
+
+.exchange_box {
+  padding: 1rem;
+  border-radius: 0.5rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 1.5rem;
+  background-color: var(--color_lightprimary);
+
+  &.from {
+    position: relative;
+    margin-bottom: 10rem;
+
+    &:after {
+      content: '';
+      position: absolute;
+      top: 100%;
+      left: 50%;
+      transform: translateX(-50%);
+      height: 6rem;
+      width: 1px;
+      background-color: var(--color_secondary);
+      z-index: 1;
+    }
+  }
+
+  &.to {
+    position: relative;
+    margin-top: 10rem;
+
+    &:after {
+      content: '';
+      position: absolute;
+      bottom: 100%;
+      left: 50%;
+      transform: translateX(-50%);
+      height: 6rem;
+      width: 1px;
+      background-color: var(--color_secondary);
+      z-index: 1;
+    }
+  }
+
+  .fromTo {
+    padding: 0 0.5rem;
+    display: block;
+    text-align: left;
+
+    h5.price {
+      font-size: 2.6rem;
+      font-weight: 600;
+      color: var(--color_primary);
+      margin-top: 0.8rem;
+    }
+  }
+
+  .balance_symbol {
+    padding: 0 0.5rem;
+    display: block;
+    text-align: right;
+  }
+}
+
+button.exchage_btn {
+  min-width: 4rem;
+  width: 4rem;
+  height: 4rem;
+  min-height: 4rem;
+  border-radius: 50%;
+  padding: 0.5rem;
+  margin: 0 auto;
+  background-color: var(--color_primary);
+  color: var(--color_white);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 5;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  svg {
+    height: 2rem;
+  }
+}
+
+.summary_list {
+  margin-top: 0.5rem;
+
+  li {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0.5rem 0;
+
+    p {
+      font-size: 1.4rem;
+      font-weight: 600;
+      color: var(--color_secondary);
+      margin-bottom: 0;
+    }
+
+    span {
+      font-size: 1.4rem;
+      font-weight: 500;
+      color: var(--color_primary);
     }
   }
 }
