--- a/css/drawer/drawer.scss
+++ b/css/drawer/drawer.scss
@@ -48,7 +48,7 @@
     margin-bottom: 1rem;
 
     li {
-      width: 25%;
+      width: 50%;
 
       button {
         display: flex;
@@ -69,116 +69,6 @@
           color: var(--color_white);
         }
       }
-    }
-  }
-
-  h3.title_big {
-    font-size: 2.6rem;
-    color: var(--color_primary);
-    font-weight: 600;
-    margin-top: 1.5rem;
-  }
-
-
-  h4.title {
-    font-size: 2rem;
-    color: var(--color_primary);
-    font-weight: 600;
-    margin-top: 1.5rem;
-  }
-
-  p.sub_title {
-    font-size: 1.4rem;
-    color: var(--color_secondary);
-    font-weight: 500;
-    margin: 0.6rem 0;
-    // text-transform: capitalize;
-  }
-
-  .exchange_box {
-    padding: 1rem;
-    border-radius: 0.5rem;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin-bottom: 1.5rem;
-    background-color: var(--color_lightprimary);
-
-    &.from {
-      position: relative;
-      margin-bottom: 10rem;
-
-      &:after {
-        content: '';
-        position: absolute;
-        bottom: -40%;
-        left: 50%;
-        transform: translateX(-50%);
-        height: 4rem;
-        width: 1px;
-        background-color: var(--color_secondary);
-        z-index: -1;
-      }
-    }
-
-    &.to {
-      position: relative;
-      margin-top: 10rem;
-
-      &:after {
-        content: '';
-        position: absolute;
-        top: -40%;
-        left: 50%;
-        transform: translateX(-50%);
-        height: 4rem;
-        width: 1px;
-        background-color: var(--color_secondary);
-        z-index: -1;
-      }
-    }
-
-    .fromTo {
-      padding: 0 0.5rem;
-      display: block;
-      text-align: left;
-
-      h5.price {
-        font-size: 2.6rem;
-        font-weight: 600;
-        color: var(--color_primary);
-        margin-top: 0.8rem;
-      }
-    }
-
-    .balance_symbol {
-      padding: 0 0.5rem;
-      display: block;
-      text-align: right;
-    }
-  }
-
-  button.exchage_btn {
-    min-width: 4rem;
-    width: 4rem;
-    height: 4rem;
-    min-height: 4rem;
-    border-radius: 50%;
-    padding: 0.5rem;
-    margin: 0 auto;
-    background-color: var(--color_primary);
-    color: var(--color_white);
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    z-index: 5;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-    svg {
-      height: 2rem;
     }
   }
 
@@ -443,7 +333,7 @@
       justify-content: space-between;
       border: 1px solid var(--color_grey);
       border-radius: 0.5rem;
-      padding: 1rem;
+      padding: 0.5rem 1rem;
       margin-bottom: 1rem;
 
       .select_symbol {
@@ -486,31 +376,6 @@
       }
     }
 
-    // Summary List
-    .summary_list {
-      margin-top: 0.5rem;
-
-      li {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        padding: 0.5rem 0;
-
-        p {
-          font-size: 1.4rem;
-          font-weight: 600;
-          color: var(--color_secondary);
-          margin-bottom: 0;
-        }
-
-        span {
-          font-size: 1.4rem;
-          font-weight: 500;
-          color: var(--color_primary);
-        }
-      }
-    }
-
     button.edit_address {
       min-width: 3rem;
       width: 3rem;
@@ -536,7 +401,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 1rem;
+  padding: 0.5rem 1rem;
   border-radius: 0.6rem;
   cursor: pointer;
 
