--- a/css/header/header.css
+++ b/css/header/header.css
@@ -62,6 +62,13 @@
   border-radius: 0.6rem;
 }
 
+@media screen and (max-width: 991px) {
+  .header .header_menu .deposit_btn {
+    padding: 0.8rem 1.2rem;
+    font-size: 1.3rem;
+  }
+}
+
 .header .header_menu .dropdown {
   margin: 0 0 0 1rem;
 }
