--- a/css/sidebar/sidebar.css
+++ b/css/sidebar/sidebar.css
@@ -235,6 +235,7 @@
           transform: translate(-50%, 0%);
   padding: 0.5rem;
   z-index: 25;
+  margin-top: -1rem;
 }
 
 @media screen and (min-width: 992px) {
@@ -337,8 +338,9 @@
     -webkit-transition: 0.3s;
     transition: 0.3s;
     padding: 1rem;
+    padding-top: 1.5rem;
     border-radius: 1rem 1rem 0 0;
-    max-height: 7rem;
+    max-height: 8rem;
   }
 }
 /*# sourceMappingURL=sidebar.css.map */
